--- a/assets/stylesheet/index.scss
+++ b/assets/stylesheet/index.scss
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800&display=swap');
+
+@layer base {
+    html {
+        font-family: 'Jost', sans-serif;
+    }
+}
+
 .skeleton {
     @apply relative before:absolute before:inset-0 before:-translate-x-full before:animate-[shimmer_1.3s_infinite] before:bg-gradient-to-r before:from-transparent before:via-gray-200/60 before:to-transparent isolate overflow-hidden shadow-xl shadow-black/5 before:border-y before:border-white/30 bg-gray-300
 }
