--- a/assets/stylesheet/index.scss
+++ b/assets/stylesheet/index.scss
@@ -13,3 +13,7 @@
 .skeleton {
     @apply relative before:absolute before:inset-0 before:-translate-x-full before:animate-[shimmer_1.3s_infinite] before:bg-gradient-to-r before:from-transparent before:via-gray-200/60 before:to-transparent isolate overflow-hidden shadow-xl shadow-black/5 before:border-y before:border-white/30 bg-gray-300
 }
+
+.qwezxc {
+    @apply border-2 border-red-500
+}
